--- a/products.html
+++ b/products.html
@@ -59,7 +59,7 @@
 				<div class="row">
 					<div class="col-xs-12 col-sm-4 col-md-6 col-lg-6">
 						<span class="nav-text">
-							<i class="fas fa-phone" aria-hidden="true"></i>   + 786-293-3272
+							<i class="fas fa-phone" aria-hidden="true"></i>   {{MasterInfo[0].CubeLocalPhone}}
 						</div>
 
 						<div class="col-xs-12 col-sm-8 col-md-6 col-lg-6 text-right ">
@@ -83,7 +83,7 @@
 			<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 				<div class="container-fluid">
 					<!--logo -->
-					<a class="navbar-brand" href="#"><img src="img/logo-cube-mia.png" style="max-width:130px;" /></a>
+					<a class="navbar-brand" href="#"><img ng-src="{{'/'+ MasterInfo[0].HOMELOGO}}" style="max-width:130px;" /></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
@@ -174,7 +174,7 @@
 								<div ng-show="!ShowDetail" class="row" ng-repeat="(key, value) in ProductCards | groupBy: 'Fila'" style="margin-bottom:20px;">
 									<div ng-repeat="ProductCardsItem in value" class="card-deck col-xs-12 col-sm-12 col-md-4 col-lg-4">
 										<div class="card">
-											<img class="card-img-top" ng-src="{{'/img/'+ ProductCardsItem.CATIMAGE}}" alt="products-cube-image" width="400" height="200">
+											<img class="card-img-top" ng-src="{{ProductCardsItem.CATIMAGE}}" alt="products-cube-image" width="400" height="200">
 											<div class="card-body" >
 											<h5 class="card-title text-center"><a href="#" ng-click="FindSubcategories(ProductCardsItem.ID, ProductCardsItem.HASCHILD, ProductCardsItem.NAME);" title="View Product">{{ProductCardsItem.NAME}}</a></h5>
 										</div>
@@ -255,47 +255,45 @@
 </main>
 </body>
 <footer class="text-light">
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-md-3 col-lg-4 col-xl-3">
-				<h5>About</h5>
-				<hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
-				<p class="mb-0">
-					Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
-				</p>
-			</div>
-			<div class="col-md-2 col-lg-2 col-xl-2 mx-auto">
-				<h5>Informations</h5>
-				<hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
-				<ul class="list-unstyled">
-					<li><a href="">Link 1</a></li>
-					<li><a href="">Link 2</a></li>
-				</ul>
-			</div>
-			<div class="col-md-3 col-lg-2 col-xl-2 mx-auto">
-				<h5>Others links</h5>
-				<hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
-				<ul class="list-unstyled">
-					<li><a href="">Link 1</a></li>
-					<li><a href="">Link 2</a></li>
-				</ul>
-			</div>
-			<div class="col-md-4 col-lg-3 col-xl-3">
-				<h5>Contact</h5>
-				<hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
-				<ul class="list-unstyled">
-					<li><i class="fa fa-home mr-2"></i> Cube-US</li>
-					<li><i class="fa fa-envelope mr-2"></i> email@example.com</li>
-					<li><i class="fa fa-phone mr-2"></i> + 786-293-3272</li>
-				</ul>
-			</div>
-			<div class="col-12 copyright mt-3  " >
-				<p class="float-right">
-					<a href="#" class="green"><i class="fas fa-arrow-circle-up fa-3x"></i></a>
-				</p>
-			</div>
-		</div>
-	</div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-3 col-lg-4 col-xl-3">
+        <h5>About</h5>
+        <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
+        <p class="mb-0">
+          {{MasterInfo[0].AboutCube}}
+        </p>
+      </div>
+      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto">
+        <h5>Informations</h5>
+        <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
+        <ul class="list-unstyled">
+          <li ng-repeat="mylink in Links1"><a href={{mylink.PageLinks}}>{{mylink.PageLinks}}</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto">
+        <h5>Others links</h5>
+        <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
+        <ul class="list-unstyled">
+          <li ng-repeat="mylink in Links2"><a href={{mylink.PageLinks}}>{{mylink.PageLinks}}</a></li>
+        </ul>
+      </div>
+      <div class="col-md-4 col-lg-3 col-xl-3">
+        <h5>Contact</h5>
+        <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
+        <ul class="list-unstyled">
+          <li><i class="fa fa-home mr-2"></i> {{MasterInfo[0].CubeLocation}}</li>
+          <li><i class="fa fa-envelope mr-2"></i> {{MasterInfo[0].CubeEmail}}</li>
+          <li><i class="fa fa-phone mr-2"></i> {{MasterInfo[0].CubeLocalPhone}}</li>
+        </ul>
+      </div>
+      <div class="col-12 copyright mt-3  " >
+        <p class="float-right">
+          <a href="#" class="green"><i class="fas fa-arrow-circle-up fa-3x"></i></a>
+        </p>
+      </div>
+    </div>
+  </div>
 </footer>
 </div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
